chore: fix letter spacing for c letter

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,6 +38,7 @@ body,html {
     line-height: 40px;
     text-align: center;
     border-radius: 50px;
+    letter-spacing: 0px;
 }
 
 .title {
